Fix for duplicate emails 1v2